layout issue fixed

--- a/src/styles/scss/sass/_cursor.scss
+++ b/src/styles/scss/sass/_cursor.scss
@@ -1,4 +1,4 @@
-*{
+.public_layout *{
     cursor: none !important;
 }
 .cursor_wrapper{
